--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,10 @@
-@import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css);
-@import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css);
+@import './variables.css';
 
 html, body {
-  height: 100%;
-  font-size: 14px
+  /*height: 100%;*/
+  min-height: 100%;
+  font-size: 14px;
+  /*overflow: hidden;*/
 }
 
 body {
@@ -32,16 +33,6 @@ h1, h2, h3, h4, h5, h6, p {
   padding-bottom: 20px;
 }
 
-/*.cart-btn {*/
-/*  outline: none;*/
-/*  border: none;*/
-/*  min-width: 120px;*/
-/*  height: 36px;*/
-/*  color: #fff;*/
-/*  background: var(--primary-bg);*/
-/*  border-radius: 3px;*/
-/*}*/
-
 .cart-btn .bi {
   font-size: 1.2rem;
 }
@@ -49,13 +40,6 @@ h1, h2, h3, h4, h5, h6, p {
 .cart-count.hidden {
   display: none;
 }
-
-/*.os-logo-text {*/
-/*  display: inline-block;*/
-/*  font-weight: 600;*/
-/*  font-size: 2.5rem;*/
-/*  color: var(--primary-bg);*/
-/*}*/
 
 .os-products {
   display: grid;
@@ -90,4 +74,47 @@ h1, h2, h3, h4, h5, h6, p {
 
 .os-btn-default:hover {
   background-color: #e3e3e3;
+}
+
+.link-unstyled, .link-unstyled:link, .link-unstyled:hover {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.sidebar {
+  background: var(--white);
+  box-shadow: 6px 0 18px rgb(0 0 0 / 6%);
+  padding: 25px;
+  height: 400px;
+}
+
+.sidebar__title {
+  font-size: 24px;
+  line-height: 36px;
+  height: 36px;
+  margin-top: 0;
+  margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  color: #6c757d;
+}
+
+.sidebar__nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.sidebar__nav li {
+  font-size: 15px;
+  margin-bottom: 16px;
+}
+
+.sidebar__nav li.active,
+.sidebar__nav li:hover {
+  color: var(--primary-bg);
+}
+
+.sidebar__nav li .bi {
+  padding-right: 10px;
 }
