--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,10 +1,8 @@
 @import './variables.css';
 
 html, body {
-  /*height: 100%;*/
   min-height: 100%;
   font-size: 14px;
-  /*overflow: hidden;*/
 }
 
 body {
@@ -110,8 +108,8 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 16px;
 }
 
-.sidebar__nav li.active,
-.sidebar__nav li:hover {
+.sidebar__nav a.active,
+.sidebar__nav a:hover {
   color: var(--primary-bg);
 }
 
