--- a/src/components/cart/cart-style.css
+++ b/src/components/cart/cart-style.css
@@ -8,9 +8,11 @@
 }
 
 .item-row {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr auto;
+  grid-gap: 20px;
   align-items: center;
-  justify-content: space-between;
+  justify-items: center;
   padding: 15px;
   margin-bottom: 15px;
   box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
@@ -27,6 +29,10 @@
 .item-preview img {
   width: 100%;
   max-height: 40px;
+}
+
+.item-name {
+  justify-self: left;
 }
 
 .item-preview,
