--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -85,6 +85,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .sidebar {
+  position: sticky;
+  top: 0;
   background: var(--white);
   box-shadow: 6px 0 18px rgb(0 0 0 / 6%);
   padding: 25px;
