--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -6,6 +6,11 @@
 
 .list-view-controls .bi {
   cursor: pointer;
+  margin-left: 5px;
+}
+
+.list-view-controls .bi.active {
+  color: var(--primary-bg);
 }
 
 .products-page {
@@ -13,7 +18,7 @@
 }
 
 .filters-panel {
-  grid-template-columns: 3fr 2fr 1fr;
+  grid-template-columns: 3fr 1fr;
   grid-gap: 20px;
   display: grid;
   align-items: center;
